--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -29,4 +29,17 @@
     <servlet-name>SpringMVC</servlet-name>
     <url-pattern>/</url-pattern>
   </servlet-mapping>
+
+  <!--<filter>-->
+    <!--<filter-name>ShiroFilter</filter-name>-->
+    <!--<filter-class>org.apache.shiro.web.servlet.IniShiroFilter</filter-class>-->
+    <!--<init-param>-->
+      <!--<param-name>configPath</param-name>-->
+      <!--<param-value>classpath:shiro.ini</param-value>-->
+    <!--</init-param>-->
+  <!--</filter>-->
+  <!--<filter-mapping>-->
+    <!--<filter-name>ShiroFilter</filter-name>-->
+    <!--<url-pattern>/*</url-pattern>-->
+  <!--</filter-mapping>-->
 </web-app>
