--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,11 @@
       <artifactId>spring-webmvc</artifactId>
       <version>${spring-version}</version>
     </dependency>
+    <dependency>
+      <groupId>javax.servlet</groupId>
+      <artifactId>servlet-api</artifactId>
+      <version>2.5</version>
+    </dependency>
 
     <dependency>
       <groupId>org.springframework</groupId>
