--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -31,15 +31,15 @@
   </servlet-mapping>
 
   <!--<filter>-->
-    <!--<filter-name>ShiroFilter</filter-name>-->
+    <!--<filter-sname>ShiroFilter</filter-sname>-->
     <!--<filter-class>org.apache.shiro.web.servlet.IniShiroFilter</filter-class>-->
     <!--<init-param>-->
-      <!--<param-name>configPath</param-name>-->
+      <!--<param-sname>configPath</param-sname>-->
       <!--<param-value>classpath:shiro.ini</param-value>-->
     <!--</init-param>-->
   <!--</filter>-->
   <!--<filter-mapping>-->
-    <!--<filter-name>ShiroFilter</filter-name>-->
+    <!--<filter-sname>ShiroFilter</filter-sname>-->
     <!--<url-pattern>/*</url-pattern>-->
   <!--</filter-mapping>-->
 </web-app>
